style.css
:root {
  --darkBlue: #7895f9; /* better contrast: 4b74fe */
  --lightBlue: #dde0f4;
  --textColor: rgba(0, 0, 0, 0.8);
  --defaultContentWidth: 700px;
  --headerFont: "Patua One", serif;
  --darkGrey: #c8c4d0;
  --borderRadius: 8px;
}

* {
   margin: 0;
  padding: 0;
  border: 0;
  line-height: 1.6;
  font-size: 1em;
  font-family: var(--headerFont);
  color: var(--textColor);
  overflow-wrap: break-word;
  box-sizing: border-box;
}

h1 {
  text-align: center;
  font-size: 3.6em;
  line-height: 1.2;
  color: var(--darkBlue);
}

body {
  background-color: var(--lightBlue);
}

.main {
  max-width: var(--defaultContentWidth);
  margin: 0 auto;
  padding: 50px 25px;
}

.main--relative {
  position: relative;
}

.main__section--hidden {
  display: none !important;
}

.main__splash {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas: "logo"
    "tagline"
    "joinBtn"
    "getBtn"
    ;
  gap: 25px;
}

.main__splash .logo {
  grid-area: logo;
  margin: 0 auto;
  display: block;
  max-width: 100%;
}

.main__splash .button--joinRoom {
  grid-area: joinBtn;
}

.main__splash .button--getRoom {
  grid-area: getBtn;
}

.button {
  padding: 10px 15px;
  text-align: center;
  border-radius: var(--borderRadius);
  background: var(--darkBlue);
  font-size: 1.5em;
}

.button--outline {
  background: transparent;
  color: var(--darkBlue);
  border: 2px solid var(--darkBlue);
  padding: 8px 13px; /* subtract border width */
}

.button--big {
  padding: 50px 25px;
}

.initForm {
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 25px;
}

.initForm div {
  display: grid;
}

.formLabel {
  display: block;
  font-weight: 700;
  margin-bottom: 6px;
}

.editText {
  padding: 15px;
  border: 2px solid var(--darkBlue);
  background: #fff;
  border-radius: var(--borderRadius);
}

/* chat page */

.main__chat {
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 25px;
}

/* loader, thanks loading.io! */

#loaderWrap {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 4;
  background-color: #dde0f4;
  display: grid;
}

#loaderWrap.hidden {
  display: none;
}

#loader {
  margin: auto;
  max-width: 200px;
}

#loader img {
  max-width: 120px;
  display: block;
  margin: auto;
}

.lds-ring {
  position: relative;
  width: 200px;
  height: 200px;
  display: grid;
}

.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 200px;
  height: 200px;
  border: 10px solid #489be8;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: var(--darkBlue) transparent transparent transparent;
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}


.chatLine {
  display: grid;
  grid-template-columns: 1fr;
}

.chatLine--you {
	justify-items: end;
}

.chatLine--other {
	justify-items: start;
}

.chatBubble {
	max-width: 95%;
	display: inline-block;
	border-radius: calc(2 * var(--borderRadius));
	padding: 8px 15px;
  word-wrap: break-word;
  text-align: left;

}

.chatLine--you > .chatBubble {
	background-color: var(--darkBlue);
	color: rgba(255, 255, 255, 0.9); /* TODO: refactor to variable */
  border-bottom-right-radius: 0;
}

.chatLine--other > .chatBubble {
	background-color: var(--darkGrey);
  border-bottom-left-radius: 0;
}

#chatForm {
  position: sticky;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 0;
  border-radius: calc(2 * var(--borderRadius));
  display: grid;
  grid-template-columns: 1fr;
}

#chatInput {
  padding: 25px;
  background-color: var(--darkBlue);
  color: rgba(255, 255, 255, 0.9); /* TODO: refactor to variable */
}

#chatInput::placeholder {
  color: rgba(255, 255, 255, 0.8); /* TODO: refactor to variable */
}

footer {
  padding: 25px;
  text-align: center;
  border-top: 1px solid var(--darkBlue);
  margin: 0 auto;
  max-width: var(--defaultContentWidth);
  display: grid;
  grid-template-columns: 1fr auto auto 1fr;
  grid-template-areas:
    ". logo logo ."
    ". text text .";
  gap: 25px;
  align-items: center;
}

.footer__logo {
  display: block;
  margin: 0 auto;
  max-width: 50px;
  grid-area: logo;
}

.footer__text {
  grid-area: text;
}



@media (min-width: 700px) {
  h1 {
    font-size: 5em;
  }
  .main__splash img {
    max-width: 600px;
  }
  .main__splash {
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "logo logo"
      "tagline tagline"
      "joinBtn getBtn";
  }
  .chatBubble {
    max-width: 70%;
  }
  footer {
    grid-template-areas: ". logo text .";
  }
}

